# mediaindexer

./: CMakeLists.txt  README.md  TODO
files/db8/kinds/: com.palm.media.audio.album  com.palm.media.audio.artist  com.palm.media.audio.file  com.palm.media.audio.genre  com.palm.media.audio.gerne  com.palm.media.file  com.palm.media.image.album  com.palm.media.image.file  com.palm.media.misc.file  com.palm.media.playlist.file  com.palm.media.types  com.palm.media.video.file  com.palm.music.filterplaylists  com.palm.music.staticplaylists
files/db8/permissions/: com.palm.media.audio.album  com.palm.media.audio.artist  com.palm.media.audio.file  com.palm.media.audio.genre  com.palm.media.image.album  com.palm.media.image.file  com.palm.media.misc.file  com.palm.media.playlist.file  com.palm.media.types  com.palm.media.video.file  com.palm.music.filterplaylists  com.palm.music.staticplaylists
files/sysbus/: org.webosports.mediaindexer.json.prv.in  org.webosports.mediaindexer.perm.json  org.webosports.mediaindexer.role.json.in  org.webosports.mediaindexer.service.prv.in  org.webosports.service.mediaindexer.perm.json  org.webosports.service.mediaindexer.role.json.in  org.webosports.service.mediaindexer.service.in
files/systemd/: mediaindexer.service
src/: CMakeLists.txt  MediaFile.cc  MediaFile.hh  MediaFileBuilder.hh  MediaScanner.cc  MediaScanner.hh  MediaScannerServiceApp.cc  MediaScannerServiceApp.hh  MediaStore.cc  MediaStore.hh  MetadataExtractor.cc  MetadataExtractor.hh  MojoMediaDatabase.cc  MojoMediaDatabase.hh  MojoMediaDatabaseAudio.cc  MojoMediaDatabaseImage.cc  MojoMediaObjectSerializer.cc  MojoMediaObjectSerializer.hh  Scanner.cc  Scanner.hh  ScannerCore.hh  ScannerDaemon.cc  SubtreeWatcher.cc  SubtreeWatcher.hh  basesource.cpp  basesource.h  config.h  filesystemsource.cpp  filesystemsource.h  main.cpp  mediaindexdatabase.cpp  mediaindexdatabase.h  mediaindexer.cpp  mediaindexer.h  mediatypehandler.cpp  mediatypehandler.h  utils.cc
